
[+][gnu-linux][gnu-linux-dpdk] Performance optimizations 
[+][gnu-linux][gnu-linux-dpdk] Implemented COPY_TTL_IN/COPY_TTL_OUT between IP and MPLS
[+][gnu-linux][gnu-linux-dpdk] Added SCTP support 
[+][gnu-linux][gnu-linux-dpdk] Added PBB support 
[+][gnu-linux][gnu-linux-dpdk] Increased default supported num. of MPLS labels to 32


v0.4.4

[B][CMM] Fixed dead-lock during destroy LSI in multi-LSI scenarios with high rate of PKT_INs. #31
[B] Fix compile errors on older gcc (e.g. v4.4) and old kernels (up to 2.6) where TP_STATUS_VLAN_VALID was not defined

v0.4.3

[B][CMM] OF1.2/OF1.3 added mask value for ARP_SPA 
[B][CMM] OF1.2/OF1.3 implemented WRITE_METADATA instruction parsing

[B][gnu-linux] pktclassifier: fixed bug handling unknown ICMPv6 options

[B][gnu-linux-dpdk] Fixing invalid release of buffers that were not in the bufferpool (core datapacket_t)
[B][gnu-linux-dpdk] Preventing double RX/TX queue setup #24 

v0.4.2 

[B] Fixing deadlock in switch_manager #16
[B] Fixing driver-extra-params #19

v0.4.1

[+] Improve markdown support in READMEs #12
[B] Fixed OF1.2 VLAN matching translation according to spec, issue #15

[B][gnu-linux] Fixed make check when rofl-pipeline is compiled with inline funcs. #8
[B][gnu-linux] Unbalanced throughput among ports beyond I/O limit #10

[+][gnu-linux-dpdk] Change verbosity of I/O debug logs #11

v0.4.0

[+] Added tutorial on how to create new platform drivers under src/xdpd/drivers/README
[+] Changed main version detection; now it uses VERSION file instead of 'git tag' 

[+][gnu-linux-dpdk] Merged GNU/Linux DPDK mainstream

v0.4RC2

[K] Automake 1.4 compilation. Please refer to the README.

[+][plugins][config] Now plugin checks for unrecognized elements and aborts if any are found 
[+] Marked SSL socket support as stable. Added example_ssl.cfg
[+] Adapted translation utils to the new rofl-pipeline APIs (constructors in HBO and use of getters) 
[B] Fixed deadlock during LSI destruction (port delete notification)

v0.4RC1
