@@ -98,12 +98,17 @@ inline void platform_packet_copy_contents(datapacket_t* pkt, datapacket_t* pkt_c
 	pkt_copy->is_replica = true;
 	pkt_copy->sw = pkt->sw;
 
-	//Initialize replica buffer and classify  //TODO: classification state could be copied
-	init_datapacket_dpdk(pkt_dpdk_copy, mbuf, (of_switch_t*)pkt->sw, pkt_dpdk->clas_state.port_in, 0, true, true);
+	//Initialize the buffer and copy but do not classify
+	init_datapacket_dpdk(pkt_dpdk_copy, mbuf, (of_switch_t*)pkt->sw, pkt_dpdk->clas_state.port_in, 0, false, true);
 
-	//Copy classification state and output queue 
-	pkt_dpdk->output_queue = pkt_dpdk_copy->output_queue;
-	pkt_dpdk->clas_state = pkt_dpdk_copy->clas_state;
+	//Copy output_queue
+	pkt_dpdk_copy->output_queue = pkt_dpdk->output_queue;
+	//Copy classification state
+	pkt_dpdk_copy->clas_state.type = pkt_dpdk->clas_state.type;
+	// do not overwrite clas_state.base and clas_state.len, as they are pointing to pkt_dpdk and were set already when calling pkt_dpdk_copy->init(...)
+	pkt_dpdk_copy->clas_state.port_in = pkt_dpdk->clas_state.port_in;
+	pkt_dpdk_copy->clas_state.phy_port_in = pkt_dpdk->clas_state.phy_port_in;
+	pkt_dpdk_copy->clas_state.calculate_checksums_in_sw = pkt_dpdk->clas_state.calculate_checksums_in_sw;
 }
 
 /**
