@@ -44,9 +44,14 @@ void clone_pkt_contents(datapacket_t* src, datapacket_t* dst){
 	//Initialize the buffer and copy but do not classify
 	pack_dst->init(pack_src->get_buffer(), pack_src->get_buffer_length(), pack_src->lsw, pack_src->clas_state.port_in, pack_src->clas_state.phy_port_in, false, true);
 
-	//Copy classification state and 
+	//Copy output_queue
 	pack_dst->output_queue = pack_src->output_queue;
-	pack_dst->clas_state = pack_src->clas_state;
+	//Copy classification state
+	pack_dst->clas_state.type = pack_src->clas_state.type;
+	// do not overwrite clas_state.base and clas_state.len, as they are pointing to pack_src and were set already when calling pack_dst->init(...)
+	pack_dst->clas_state.port_in = pack_src->clas_state.port_in;
+	pack_dst->clas_state.phy_port_in = pack_src->clas_state.phy_port_in;
+	pack_dst->clas_state.calculate_checksums_in_sw = pack_src->clas_state.calculate_checksums_in_sw;
 }
 
 void platform_packet_set_queue(datapacket_t* pkt, uint32_t queue)
